# NevstruevDmitriy_targem

./: .gitmodules  .travis.yml  Readme.md
cpp_task/: CMakeLists.txt  Readme.md
cpp_task/examples/: demo.cpp
cpp_task/include/: MyString.hpp
cpp_task/inputDemo/: Romeo_and_Juliet_Shakespeare.txt  myInput.txt
cpp_task/sources/: MyString.cpp
cpp_task/tests/: test.cpp
serversite_task/: CMakeLists.txt  Readme.md
serversite_task/applications/: solution.cpp
